hopefully fixed whitespace problem in code tags

--- a/css/style.css
+++ b/css/style.css
@@ -858,10 +858,3 @@ div.highlight pre {
 }
 
 code.has-jax {font: inherit; font-size: 100%; background: inherit; border: inherit;}
-
-/* standard */
- .post pre {
-  border: 1px solid #ddd;
-  background-color: #eef;
-  padding: 0 .4em;
-}
